overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,9 @@ nav ul li a:hover{
   font-size: 17px;
 }
 
+body{
+  overflow-x: hidden;
+ }
 /* Navbar links on mouse-over */
 .navbar a:hover {
   background-color: #000;
